--- a/build.gradle
+++ b/build.gradle
@@ -51,5 +51,8 @@ dependencies {
     implementation "com.paulscode.sound:codecjorbis:20101023"
     implementation "com.paulscode.sound:librarylwjglopenal:20100824"
     implementation "com.mojang:authlib:1.5.21"
+}
 
+manifest {
+    attributes "Main-Class": "StartBuilt"
 }
