--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ repositories {
     maven {
         url "https://mvnrepository.com/artifact"
     }
+    maven {
+        url = "https://repo.viaversion.com/"
+    }
 }
 
 dependencies {
@@ -51,6 +54,7 @@ dependencies {
     implementation "com.paulscode.sound:codecjorbis:20101023"
     implementation "com.paulscode.sound:librarylwjglopenal:20100824"
     implementation "com.mojang:authlib:1.5.21"
+    implementation fileTree('extra')
 }
 
 jar {
